# Google-ADK-Learning

Agent Development Kit Demo/POC/: .env  .gitignore  README.md  pyproject.toml  tools_supporting_models.txt
Agent Development Kit Demo/POC/agent_team/: agent.py
Agent Development Kit Demo/POC/core_utils/: util.py
Agent Development Kit Demo/POC/src/agent_team/: agent.py  stateful_agents.py
Agent Development Kit Demo/POC/src/agent_team/tools_util/: __init__.py  stateful_tools.py
Agent Development Kit Demo/POC/src/core_utils/: util.py
Agent Development Kit Demo/POC/src/stock_advisor_workflow/: agent.py
Agent Development Kit Demo/POC/src/stock_advisor_workflow/subagents/: __init__.py
Agent Development Kit Demo/POC/src/weather_time_tool_agent/: agent.py
Agent Development Kit Demo/POC/stock_advisor_workflow/: agent.py
Agent Development Kit Demo/POC/stock_advisor_workflow/subagents/: __init__.py
Agent Development Kit Demo/POC/weather_time_tool_agent/: agent.py
