[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.7.0",
    "duckduckgo-search==8.1.1",
    "google-adk>=1.17.0",
    "langchain-community>=0.4.1",
    "litellm>=1.79.1",
]

[tool.uv.pip]
upgrade = true

[tool.ruff]
ignore = ["D"] # Ignores all 'D' rules (docstring-related)